# L2

./: README.md  flake.nix  pyproject.toml
.github/workflows/: check.yml  lock-checker.yml
.helix/: languages.toml
examples/: boolean-loops.l2  boolean-precedence.l2  comparisons.l2  cumulative-sum.l2  fibonacci.l2  nested-loops.l2  simple-loop.l2  variables.l2
src/: runtime.c
src/dialects/: __init__.py  bigint.py  bignum.py  bignum_runtime.c  bignum_to_llvm.py  noop.py
src/ic3/: __init__.py  extractor.py  ic3.py
src/l2/: __init__.py  __main__.py  core.py
src/l2/dialects/: bignum_to_llvm.py
src/transforms/: __init__.py  bignum_to_llvm.py  convert_scf_to_cf.py  noop.py
tests/ic3/: affine-relation.l2  bounds.l2  constant-diff.l2  constant-sum-3vars.l2  constant-sum.l2  even.l2  gte.l2  increasing-gap.l2  lit.cfg.py  mod.l2  multivar.l2  non-negative.l2  not-affine-relation.l2  not-bounded.l2  not-bounds-tight.l2  not-constant-diff.l2  not-constant-sum-3vars.l2  not-constant-sum.l2  not-eq.l2  not-even.l2  not-gte.l2  not-increasing-gap.l2  not-mod.l2  not-multiplicative-invariant.l2  not-non-negative.l2  not-odd.l2  not-relational1.l2  not-relational2.l2  not-triple-order.l2  odd.l2  relational1.l2  relational2.l2  termination.l2  triple-order.l2  understanding-ic3-example1.l2  understanding-ic3-example2.l2
tests/l2/: boolean-loops.l2  boolean-precedence.l2  comparisons.l2  cumulative-sum.l2  fibonacci.l2  lit.cfg.py  nested-loops.l2  simple-loop.l2  variables.l2
