[project]
name = "l2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Axel Sorenson", email = "AxelPSorenson@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
l2 = "l2:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
