[project]
name = "L2"
version = "0.1.0"
description = "LoopLang: a simple loop language used for loop invariant inference experimentation."
readme = "README.md"
authors = [
    { name = "Axel Sorenson", email = "AxelPSorenson@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "lark>=1.3.0",
    "xdsl>=0.54.1",
]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
]

[project.scripts]
l2 = "l2.__main__:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["l2", "dialects"]

[dependency-groups]
dev = [
    "pyrefly>=0.37.0",
    "ruff>=0.14.1",
]
test = [
    "pytest>=8.4.2",
]
